fix page overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,10 @@
     --gray: #cccccc;
 }
 
+body {
+    overflow-y: hidden;
+}
+
 * {
     margin: 0;
     padding: 0;
